Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Other](#other)
       - [Dependency-Change](#dependency-change)
+      - [Other](#other)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,20 +18,23 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...7e5664d](https://github.com/cri-o/cri-o/compare/v1.22.0...7e5664d5a6e472aefdf97f750da7f08564cd9b5a) on Mon, 21 Feb 2022 23:10:46 UTC.
+[v1.22.0...6c92b67](https://github.com/cri-o/cri-o/compare/v1.22.0...6c92b67e1483322bae3c34b3eb78914a0289fbf2) on Tue, 22 Feb 2022 06:12:22 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz)
-- [cri-o.amd64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz.sha256sum)
-- [cri-o.arm64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz)
-- [cri-o.arm64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7e5664d5a6e472aefdf97f750da7f08564cd9b5a.tar.gz.sha256sum)
+- [cri-o.amd64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz)
+- [cri-o.amd64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz.sha256sum)
+- [cri-o.arm64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz)
+- [cri-o.arm64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6c92b67e1483322bae3c34b3eb78914a0289fbf2.tar.gz.sha256sum)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -42,9 +45,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -108,6 +108,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
  - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
+ - Inherits storage configs from storage.conf if crio config does not set. ([#5520](https://github.com/cri-o/cri-o/pull/5520), [@QiWang19](https://github.com/QiWang19))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
  - Update go to 1.17 in go.mod ([#5577](https://github.com/cri-o/cri-o/pull/5577), [@QiWang19](https://github.com/QiWang19))
 
