--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,16 +18,16 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...120c7d2](https://github.com/cri-o/cri-o/compare/v1.22.0...120c7d215ea49b2f20651d454837550928a85b6d) on Tue, 22 Feb 2022 21:41:03 UTC.
+[v1.22.0...e844e75](https://github.com/cri-o/cri-o/compare/v1.22.0...e844e752a4174b7410cacd7f45d7e5dde2904791) on Wed, 23 Feb 2022 03:08:09 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz)
-- [cri-o.amd64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz.sha256sum)
-- [cri-o.arm64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz)
-- [cri-o.arm64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.120c7d215ea49b2f20651d454837550928a85b6d.tar.gz.sha256sum)
+- [cri-o.amd64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz)
+- [cri-o.amd64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz.sha256sum)
+- [cri-o.arm64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz)
+- [cri-o.arm64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e844e752a4174b7410cacd7f45d7e5dde2904791.tar.gz.sha256sum)
 
 ## Changelog since v1.22.0
 
@@ -84,6 +84,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5673](https://github.com/cri-o/cri-o/pull/5673), [@haircommander](https://github.com/haircommander))
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
  - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5579](https://github.com/cri-o/cri-o/pull/5579), [@klihub](https://github.com/klihub))
