--- a/v1.23.1.md
+++ b/v1.23.1.md
@@ -4,7 +4,6 @@
     - [Changes by Kind](#changes-by-kind)
       - [Other](#other)
       - [Feature](#feature)
-      - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -14,16 +13,16 @@
 # CRI-O v1.23.1
 
 The release notes have been generated for the commit range
-[v1.23.0...53ada6d](https://github.com/cri-o/cri-o/compare/v1.23.0...53ada6de691b5c48f03b7975f3e8d5216fc13cea) on Thu, 24 Feb 2022 15:31:42 UTC.
+[v1.23.0...bdffb9a](https://github.com/cri-o/cri-o/compare/v1.23.0...bdffb9a495142dd360c763b903f4a3a067f7d725) on Thu, 24 Feb 2022 18:02:42 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz)
-- [cri-o.amd64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz.sha256sum)
-- [cri-o.arm64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz)
-- [cri-o.arm64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.53ada6de691b5c48f03b7975f3e8d5216fc13cea.tar.gz.sha256sum)
+- [cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz)
+- [cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum)
+- [cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz)
+- [cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -39,26 +38,19 @@ Download one of our static release bundles via our Google Cloud Bucket:
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
 
 #### Feature
- - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
- - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
-
-#### Bug or Regression
- - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
- - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
- - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
- - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
- - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5579](https://github.com/cri-o/cri-o/pull/5579), [@klihub](https://github.com/klihub))
- - Fix an issue where protobuf panics when serializing ListContainer and ListPodSandbox calls ([#5606](https://github.com/cri-o/cri-o/pull/5606), [@haircommander](https://github.com/haircommander))
- - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
- - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
- - Fix vm containers couldn't restore after cri-o restart ([#5574](https://github.com/cri-o/cri-o/pull/5574), [@gozssky](https://github.com/gozssky))
- - Fix zsh completion generation. ([#5586](https://github.com/cri-o/cri-o/pull/5586), [@klihub](https://github.com/klihub))
- - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
+ - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5561](https://github.com/cri-o/cri-o/pull/5561), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
- - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
- - Inherits storage configs from storage.conf if crio config does not set. ([#5520](https://github.com/cri-o/cri-o/pull/5520), [@QiWang19](https://github.com/QiWang19))
- - Update go to 1.17 in go.mod ([#5577](https://github.com/cri-o/cri-o/pull/5577), [@QiWang19](https://github.com/QiWang19))
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5615](https://github.com/cri-o/cri-o/pull/5615), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5614](https://github.com/cri-o/cri-o/pull/5614), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5592](https://github.com/cri-o/cri-o/pull/5592), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5580](https://github.com/cri-o/cri-o/pull/5580), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix an issue where protobuf panics when serializing ListContainer and ListPodSandbox calls ([#5611](https://github.com/cri-o/cri-o/pull/5611), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5550](https://github.com/cri-o/cri-o/pull/5550), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix crypto-profile bind within RHEL based containers. ([#5575](https://github.com/cri-o/cri-o/pull/5575), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix vm containers couldn't restore after cri-o restart ([#5633](https://github.com/cri-o/cri-o/pull/5633), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5589](https://github.com/cri-o/cri-o/pull/5589), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
