--- a/v1.22.2.md
+++ b/v1.22.2.md
@@ -16,7 +16,7 @@
 # CRI-O v1.22.2
 
 The release notes have been generated for the commit range
-[v1.22.1...b030be8](https://github.com/cri-o/cri-o/compare/v1.22.1...b030be8379c8000ab93abec6b9c05df001ed93bb) on Fri, 25 Feb 2022 16:45:17 UTC.
+[v1.22.1...b030be8](https://github.com/cri-o/cri-o/compare/v1.22.1...b030be8379c8000ab93abec6b9c05df001ed93bb) on Fri, 25 Feb 2022 12:54:20 EST.
 
 ## Downloads
 
