Update release notes

--- a/v1.23.1.md
+++ b/v1.23.1.md
@@ -13,16 +13,16 @@
 # CRI-O v1.23.1
 
 The release notes have been generated for the commit range
-[v1.23.0...bdffb9a](https://github.com/cri-o/cri-o/compare/v1.23.0...bdffb9a495142dd360c763b903f4a3a067f7d725) on Thu, 24 Feb 2022 18:02:42 UTC.
+[v1.23.0...1607c6e](https://github.com/cri-o/cri-o/compare/v1.23.0...1607c6ec2eddc927ef736db5525761e49df13e24) on Mon, 28 Feb 2022 17:36:25 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz)
-- [cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum)
-- [cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz)
-- [cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bdffb9a495142dd360c763b903f4a3a067f7d725.tar.gz.sha256sum)
+- [cri-o.amd64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz)
+- [cri-o.amd64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz.sha256sum)
+- [cri-o.arm64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz)
+- [cri-o.arm64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1607c6ec2eddc927ef736db5525761e49df13e24.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -43,6 +43,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5615](https://github.com/cri-o/cri-o/pull/5615), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5685](https://github.com/cri-o/cri-o/pull/5685), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5614](https://github.com/cri-o/cri-o/pull/5614), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5592](https://github.com/cri-o/cri-o/pull/5592), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5580](https://github.com/cri-o/cri-o/pull/5580), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
