Update release notes

--- a/v1.20.6.md
+++ b/v1.20.6.md
@@ -12,14 +12,14 @@
 # CRI-O v1.20.6
 
 The release notes have been generated for the commit range
-[v1.20.5...d7f3909](https://github.com/cri-o/cri-o/compare/v1.20.5...d7f3909f13f8dd3368334644b3c79f45a095098d) on Fri, 04 Feb 2022 08:50:29 UTC.
+[v1.20.5...a1b692e](https://github.com/cri-o/cri-o/compare/v1.20.5...a1b692eee89abd5420c14e7c14db94ecaa73ae10) on Tue, 01 Mar 2022 11:33:20 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz)
-- [cri-o.arm64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz)
+- [cri-o.amd64.a1b692eee89abd5420c14e7c14db94ecaa73ae10.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.a1b692eee89abd5420c14e7c14db94ecaa73ae10.tar.gz)
+- [cri-o.arm64.a1b692eee89abd5420c14e7c14db94ecaa73ae10.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.a1b692eee89abd5420c14e7c14db94ecaa73ae10.tar.gz)
 
 ## Changelog since v1.20.5
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Backport the fix of merging storage_option from drop-in files to sttorage_option from storage.conf. ([#5435](https://github.com/cri-o/cri-o/pull/5435), [@QiWang19](https://github.com/QiWang19))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5370](https://github.com/cri-o/cri-o/pull/5370), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5408](https://github.com/cri-o/cri-o/pull/5408), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5693](https://github.com/cri-o/cri-o/pull/5693), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an issue when a container with a terminal has an exec probe ([#5364](https://github.com/cri-o/cri-o/pull/5364), [@haircommander](https://github.com/haircommander))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5265](https://github.com/cri-o/cri-o/pull/5265), [@saschagrunert](https://github.com/saschagrunert))
 
