--- a/v1.21.4.md
+++ b/v1.21.4.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.21.3](#changelog-since-v1213)
     - [Changes by Kind](#changes-by-kind)
       - [Feature](#feature)
+      - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -12,14 +13,14 @@
 # CRI-O v1.21.4
 
 The release notes have been generated for the commit range
-[v1.21.3...13048cc](https://github.com/cri-o/cri-o/compare/v1.21.3...13048cccbc7fbbf6ff6723a6805e35f3ad681c95) on Mon, 21 Feb 2022 18:02:28 UTC.
+[v1.21.3...030755e](https://github.com/cri-o/cri-o/compare/v1.21.3...030755eeb54c529cd8f5ff8e649cf047138f8c3e) on Tue, 01 Mar 2022 15:32:22 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.13048cccbc7fbbf6ff6723a6805e35f3ad681c95.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.13048cccbc7fbbf6ff6723a6805e35f3ad681c95.tar.gz)
-- [cri-o.arm64.13048cccbc7fbbf6ff6723a6805e35f3ad681c95.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.13048cccbc7fbbf6ff6723a6805e35f3ad681c95.tar.gz)
+- [cri-o.amd64.030755eeb54c529cd8f5ff8e649cf047138f8c3e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.030755eeb54c529cd8f5ff8e649cf047138f8c3e.tar.gz)
+- [cri-o.arm64.030755eeb54c529cd8f5ff8e649cf047138f8c3e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.030755eeb54c529cd8f5ff8e649cf047138f8c3e.tar.gz)
 
 ## Changelog since v1.21.3
 
@@ -29,6 +30,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5557](https://github.com/cri-o/cri-o/pull/5557), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled
   Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5406](https://github.com/cri-o/cri-o/pull/5406), [@haircommander](https://github.com/haircommander))
+
+#### Bug or Regression
+ - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5686](https://github.com/cri-o/cri-o/pull/5686), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5297](https://github.com/cri-o/cri-o/pull/5297), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
