--- a/v1.20.6.md
+++ b/v1.20.6.md
@@ -12,14 +12,14 @@
 # CRI-O v1.20.6
 
 The release notes have been generated for the commit range
-[v1.20.5...33afe03](https://github.com/cri-o/cri-o/compare/v1.20.5...33afe03d6691b37d2a9eba673a22f52d9b9f0e1f) on Fri, 04 Mar 2022 19:32:48 UTC.
+[v1.20.5...76ea3d0](https://github.com/cri-o/cri-o/compare/v1.20.5...76ea3d0c702941c3066e580ecc3794568033230c) on Sat, 05 Mar 2022 00:28:51 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.33afe03d6691b37d2a9eba673a22f52d9b9f0e1f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.33afe03d6691b37d2a9eba673a22f52d9b9f0e1f.tar.gz)
-- [cri-o.arm64.33afe03d6691b37d2a9eba673a22f52d9b9f0e1f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.33afe03d6691b37d2a9eba673a22f52d9b9f0e1f.tar.gz)
+- [cri-o.amd64.76ea3d0c702941c3066e580ecc3794568033230c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.76ea3d0c702941c3066e580ecc3794568033230c.tar.gz)
+- [cri-o.arm64.76ea3d0c702941c3066e580ecc3794568033230c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.76ea3d0c702941c3066e580ecc3794568033230c.tar.gz)
 
 ## Changelog since v1.20.5
 
@@ -35,6 +35,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5408](https://github.com/cri-o/cri-o/pull/5408), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5702](https://github.com/cri-o/cri-o/pull/5702), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5693](https://github.com/cri-o/cri-o/pull/5693), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a case where conmon children are sometimes leaked ([#5704](https://github.com/cri-o/cri-o/pull/5704), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an issue when a container with a terminal has an exec probe ([#5364](https://github.com/cri-o/cri-o/pull/5364), [@haircommander](https://github.com/haircommander))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5265](https://github.com/cri-o/cri-o/pull/5265), [@saschagrunert](https://github.com/saschagrunert))
 
