Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -14,16 +14,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...71e9257](https://github.com/cri-o/cri-o/compare/v1.23.0...71e9257c13e8d91db14ac31d8902f715ef1a3f95) on Fri, 04 Mar 2022 18:49:03 UTC.
+[v1.23.0...f1d3a46](https://github.com/cri-o/cri-o/compare/v1.23.0...f1d3a46642377d9bf4cb79255020b07578023540) on Mon, 07 Mar 2022 11:37:59 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz)
-- [cri-o.amd64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz.sha256sum)
-- [cri-o.arm64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz)
-- [cri-o.arm64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.71e9257c13e8d91db14ac31d8902f715ef1a3f95.tar.gz.sha256sum)
+- [cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz)
+- [cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum)
+- [cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz)
+- [cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -41,6 +41,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Feature
  - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
+ - Implement CDI device injection: extract the names of requested CDI devices and update
+  the OCI Spec according to the corresponding CDI device specifications. Please refer to
+  https://github.com/container-orchestrated-devices/container-device-interface for more
+  info about CDI. ([#5571](https://github.com/cri-o/cri-o/pull/5571), [@klihub](https://github.com/klihub))
 
 #### Bug or Regression
  - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
@@ -68,6 +72,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/go-logr/stdr: [v1.2.0](https://github.com/go-logr/stdr/tree/v1.2.0)
 
 ### Changed
+- github.com/container-orchestrated-devices/container-device-interface: [f99e8b6 → e545712](https://github.com/container-orchestrated-devices/container-device-interface/compare/f99e8b6...e545712)
 - github.com/containers/image/v5: [v5.16.1 → v5.17.0](https://github.com/containers/image/v5/compare/v5.16.1...v5.17.0)
 - github.com/docker/docker: [v20.10.9+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.9...v20.10.11)
 - github.com/go-logr/logr: [v1.2.0 → v1.2.1](https://github.com/go-logr/logr/compare/v1.2.0...v1.2.1)
@@ -77,7 +82,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - go.opentelemetry.io/otel/trace: v1.2.0 → v1.3.0
 - go.opentelemetry.io/otel: v1.2.0 → v1.3.0
 - golang.org/x/net: e898025 → d4b1ae0
-- golang.org/x/sys: 751e447 → 2c5d950
+- golang.org/x/sys: 751e447 → 0a5406a
 - google.golang.org/grpc: v1.42.0 → v1.43.0
 
 ### Removed
