--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -14,16 +14,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...f1d3a46](https://github.com/cri-o/cri-o/compare/v1.23.0...f1d3a46642377d9bf4cb79255020b07578023540) on Mon, 07 Mar 2022 11:40:25 UTC.
+[v1.23.0...c4a4d28](https://github.com/cri-o/cri-o/compare/v1.23.0...c4a4d28cd59cf993a283b581afb6f28206e352d9) on Wed, 09 Mar 2022 14:53:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz)
-- [cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum)
-- [cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz)
-- [cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f1d3a46642377d9bf4cb79255020b07578023540.tar.gz.sha256sum)
+- [cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz)
+- [cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum)
+- [cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz)
+- [cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -58,6 +58,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
  - Fix vm containers couldn't restore after cri-o restart ([#5574](https://github.com/cri-o/cri-o/pull/5574), [@gozssky](https://github.com/gozssky))
  - Fix zsh completion generation. ([#5586](https://github.com/cri-o/cri-o/pull/5586), [@klihub](https://github.com/klihub))
+ - Fixed `get` script pointing to `main` instead of `master` for retrieving the latest revision. ([#5707](https://github.com/cri-o/cri-o/pull/5707), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
  - Forbid AppArmor profiles with the name `localhost/`. ([#5655](https://github.com/cri-o/cri-o/pull/5655), [@saschagrunert](https://github.com/saschagrunert))
 
