--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -14,16 +14,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...c4a4d28](https://github.com/cri-o/cri-o/compare/v1.23.0...c4a4d28cd59cf993a283b581afb6f28206e352d9) on Wed, 09 Mar 2022 14:55:18 UTC.
+[v1.23.0...c4c89c6](https://github.com/cri-o/cri-o/compare/v1.23.0...c4c89c6e426bf574c345465f7fab81b56fcfb1a8) on Thu, 10 Mar 2022 11:49:15 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz)
-- [cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum)
-- [cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz)
-- [cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c4a4d28cd59cf993a283b581afb6f28206e352d9.tar.gz.sha256sum)
+- [cri-o.amd64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz)
+- [cri-o.amd64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz.sha256sum)
+- [cri-o.arm64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz)
+- [cri-o.arm64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c4c89c6e426bf574c345465f7fab81b56fcfb1a8.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -41,6 +41,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Feature
  - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
+ - Automatically `chcon` and `restorecon` on get script for SELinux enabled distributions. ([#5711](https://github.com/cri-o/cri-o/pull/5711), [@saschagrunert](https://github.com/saschagrunert))
  - Implement CDI device injection: extract the names of requested CDI devices and update
   the OCI Spec according to the corresponding CDI device specifications. Please refer to
   https://github.com/container-orchestrated-devices/container-device-interface for more
