Update release notes

--- a/v1.23.2.md
+++ b/v1.23.2.md
@@ -2,6 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.23.1](#changelog-since-v1231)
     - [Changes by Kind](#changes-by-kind)
+      - [Feature](#feature)
+      - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -11,7 +13,7 @@
 # CRI-O v1.23.2
 
 The release notes have been generated for the commit range
-[v1.23.1...77a2885](https://github.com/cri-o/cri-o/compare/v1.23.1...77a288559a76ad6c2c6646201e776bd10fff5456) on Tue, 15 Mar 2022 14:34:23 UTC.
+[v1.23.1...77a2885](https://github.com/cri-o/cri-o/compare/v1.23.1...77a288559a76ad6c2c6646201e776bd10fff5456) on Tue, 15 Mar 2022 14:47:31 UTC.
 
 ## Downloads
 
@@ -26,9 +28,20 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 ### Changes by Kind
 
+#### Feature
+ - Automatically `chcon` and `restorecon` on get script for SELinux enabled distributions. ([#5711](https://github.com/cri-o/cri-o/pull/5711), [@saschagrunert](https://github.com/saschagrunert))
+ - Implement CDI device injection: extract the names of requested CDI devices and update
+  the OCI Spec according to the corresponding CDI device specifications. Please refer to
+  https://github.com/container-orchestrated-devices/container-device-interface for more
+  info about CDI. ([#5571](https://github.com/cri-o/cri-o/pull/5571), [@klihub](https://github.com/klihub))
+
+#### Bug or Regression
+ - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5673](https://github.com/cri-o/cri-o/pull/5673), [@haircommander](https://github.com/haircommander))
+ - Fixed `get` script pointing to `main` instead of `master` for retrieving the latest revision. ([#5707](https://github.com/cri-o/cri-o/pull/5707), [@saschagrunert](https://github.com/saschagrunert))
+ - Forbid AppArmor profiles with the name `localhost/`. ([#5655](https://github.com/cri-o/cri-o/pull/5655), [@saschagrunert](https://github.com/saschagrunert))
+
 #### Uncategorized
- - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5685](https://github.com/cri-o/cri-o/pull/5685), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix vm containers couldn't restore after cri-o restart ([#5633](https://github.com/cri-o/cri-o/pull/5633), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Inherits storage configs from storage.conf if crio config does not set. ([#5520](https://github.com/cri-o/cri-o/pull/5520), [@QiWang19](https://github.com/QiWang19))
 
 ## Dependencies
 
