--- a/v1.22.3.md
+++ b/v1.22.3.md
@@ -1,6 +1,9 @@
 - [CRI-O v1.22.3](#cri-o-v1223)
   - [Downloads](#downloads)
   - [Changelog since v1.22.2](#changelog-since-v1222)
+    - [Changes by Kind](#changes-by-kind)
+      - [Feature](#feature)
+      - [Bug or Regression](#bug-or-regression)
   - [Dependencies](#dependencies)
     - [Added](#added)
     - [Changed](#changed)
@@ -9,7 +12,7 @@
 # CRI-O v1.22.3
 
 The release notes have been generated for the commit range
-[v1.22.2...d93b2df](https://github.com/cri-o/cri-o/compare/v1.22.2...d93b2dfb8d0f2ad0f8b9061d941e3b216baa5814) on Tue, 15 Mar 2022 14:24:48 UTC.
+[v1.22.2...d93b2df](https://github.com/cri-o/cri-o/compare/v1.22.2...d93b2dfb8d0f2ad0f8b9061d941e3b216baa5814) on Tue, 15 Mar 2022 14:56:42 UTC.
 
 ## Downloads
 
@@ -19,6 +22,18 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - [cri-o.arm64.d93b2dfb8d0f2ad0f8b9061d941e3b216baa5814.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d93b2dfb8d0f2ad0f8b9061d941e3b216baa5814.tar.gz)
 
 ## Changelog since v1.22.2
+
+### Changes by Kind
+
+#### Feature
+ - Automatically `chcon` and `restorecon` on get script for SELinux enabled distributions. ([#5711](https://github.com/cri-o/cri-o/pull/5711), [@saschagrunert](https://github.com/saschagrunert))
+ - Implement CDI device injection: extract the names of requested CDI devices and update
+  the OCI Spec according to the corresponding CDI device specifications. Please refer to
+  https://github.com/container-orchestrated-devices/container-device-interface for more
+  info about CDI. ([#5571](https://github.com/cri-o/cri-o/pull/5571), [@klihub](https://github.com/klihub))
+
+#### Bug or Regression
+ - Fixed `get` script pointing to `main` instead of `master` for retrieving the latest revision. ([#5707](https://github.com/cri-o/cri-o/pull/5707), [@saschagrunert](https://github.com/saschagrunert))
 
 ## Dependencies
 
