Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.23.0](#changelog-since-v1230)
     - [Changes by Kind](#changes-by-kind)
       - [Other](#other)
+      - [API Change](#api-change)
       - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
@@ -14,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...58ded25](https://github.com/cri-o/cri-o/compare/v1.23.0...58ded25b3fa9f847a2f49d54685caf4c4ae42387) on Thu, 17 Mar 2022 01:02:51 UTC.
+[v1.23.0...05fc8e3](https://github.com/cri-o/cri-o/compare/v1.23.0...05fc8e3ea1e03e278fe86f41a558b88ca582cfc7) on Thu, 17 Mar 2022 05:48:42 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz)
-- [cri-o.amd64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz.sha256sum)
-- [cri-o.arm64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz)
-- [cri-o.arm64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.58ded25b3fa9f847a2f49d54685caf4c4ae42387.tar.gz.sha256sum)
+- [cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz)
+- [cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum)
+- [cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz)
+- [cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -37,6 +38,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### API Change
+ - Enable `--seccomp-use-default-when-empty`/`seccomp_use_default_when_empty` by default.
+  This is a premature step before the graduation of the `seccompDefault` feature planned for
+  Kubernetes v1.25. We now use the `runtime/default` profile for every workload specifying 
+  none (empty) in the pod manifest. ([#5587](https://github.com/cri-o/cri-o/pull/5587), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Feature
  - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
