Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...05fc8e3](https://github.com/cri-o/cri-o/compare/v1.23.0...05fc8e3ea1e03e278fe86f41a558b88ca582cfc7) on Thu, 17 Mar 2022 05:50:06 UTC.
+[v1.23.0...9222794](https://github.com/cri-o/cri-o/compare/v1.23.0...9222794e513040ccb6adeea0703e7a57424606db) on Thu, 17 Mar 2022 17:39:38 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz)
-- [cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum)
-- [cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz)
-- [cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.05fc8e3ea1e03e278fe86f41a558b88ca582cfc7.tar.gz.sha256sum)
+- [cri-o.amd64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz)
+- [cri-o.amd64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz.sha256sum)
+- [cri-o.arm64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz)
+- [cri-o.arm64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9222794e513040ccb6adeea0703e7a57424606db.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -78,21 +78,55 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
+- github.com/beevik/ntp: [v0.3.0](https://github.com/beevik/ntp/tree/v0.3.0)
+- github.com/c-bata/go-prompt: [v0.2.6](https://github.com/c-bata/go-prompt/tree/v0.2.6)
 - github.com/go-logr/stdr: [v1.2.0](https://github.com/go-logr/stdr/tree/v1.2.0)
+- github.com/gojuno/minimock/v3: [v3.0.8](https://github.com/gojuno/minimock/v3/tree/v3.0.8)
+- github.com/google/go-tpm-tools: [1614c14](https://github.com/google/go-tpm-tools/tree/1614c14)
+- github.com/google/go-tpm: [5d8a91d](https://github.com/google/go-tpm/tree/5d8a91d)
+- github.com/google/goexpect: [5b69886](https://github.com/google/goexpect/tree/5b69886)
+- github.com/google/goterm: [555d40f](https://github.com/google/goterm/tree/555d40f)
+- github.com/hexdigest/gowrap: [v1.1.8](https://github.com/hexdigest/gowrap/tree/v1.1.8)
+- github.com/intel-go/cpuid: [2aa7292](https://github.com/intel-go/cpuid/tree/2aa7292)
+- github.com/kaey/framebuffer: [7b38548](https://github.com/kaey/framebuffer/tree/7b38548)
+- github.com/mattn/go-tty: [v0.0.3](https://github.com/mattn/go-tty/tree/v0.0.3)
+- github.com/orangecms/go-framebuffer: [a0700d9](https://github.com/orangecms/go-framebuffer/tree/a0700d9)
+- github.com/pborman/getopt/v2: [v2.1.0](https://github.com/pborman/getopt/v2/tree/v2.1.0)
+- github.com/pkg/term: [v1.2.0-beta.2](https://github.com/pkg/term/tree/v1.2.0-beta.2)
+- github.com/rck/unit: [v0.0.3](https://github.com/rck/unit/tree/v0.0.3)
+- github.com/rekby/gpt: [a930afb](https://github.com/rekby/gpt/tree/a930afb)
+- github.com/twitchtv/twirp: [v5.8.0+incompatible](https://github.com/twitchtv/twirp/tree/v5.8.0)
+- github.com/u-root/gobusybox/src: [4e2fbb8](https://github.com/u-root/gobusybox/src/tree/4e2fbb8)
+- github.com/u-root/iscsinl: [84c3264](https://github.com/u-root/iscsinl/tree/84c3264)
+- github.com/u-root/uio: [e40b768](https://github.com/u-root/uio/tree/e40b768)
+- github.com/vtolstov/go-ioctl: [6be9cce](https://github.com/vtolstov/go-ioctl/tree/6be9cce)
+- pack.ag/tftp: 07909df
+- src.elv.sh: fda6250
 
 ### Changed
+- github.com/anmitsu/go-shlex: [648efa6 → 38f4b40](https://github.com/anmitsu/go-shlex/compare/648efa6...38f4b40)
 - github.com/container-orchestrated-devices/container-device-interface: [f99e8b6 → e545712](https://github.com/container-orchestrated-devices/container-device-interface/compare/f99e8b6...e545712)
 - github.com/containers/image/v5: [v5.16.1 → v5.17.0](https://github.com/containers/image/v5/compare/v5.16.1...v5.17.0)
 - github.com/docker/docker: [v20.10.9+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.9...v20.10.11)
+- github.com/frankban/quicktest: [v1.11.3 → v1.13.1](https://github.com/frankban/quicktest/compare/v1.11.3...v1.13.1)
 - github.com/go-logr/logr: [v1.2.0 → v1.2.1](https://github.com/go-logr/logr/compare/v1.2.0...v1.2.1)
+- github.com/insomniacslk/dhcp: [cc9239a → 7d93572](https://github.com/insomniacslk/dhcp/compare/cc9239a...7d93572)
+- github.com/kr/pretty: [v0.2.1 → v0.3.0](https://github.com/kr/pretty/compare/v0.2.1...v0.3.0)
 - github.com/manifoldco/promptui: [v0.8.0 → v0.9.0](https://github.com/manifoldco/promptui/compare/v0.8.0...v0.9.0)
 - github.com/opencontainers/runc: [v1.0.2 → v1.0.3](https://github.com/opencontainers/runc/compare/v1.0.2...v1.0.3)
+- github.com/pierrec/lz4/v4: [v4.0.3 → v4.1.11](https://github.com/pierrec/lz4/v4/compare/v4.0.3...v4.1.11)
+- github.com/rogpeppe/go-internal: [v1.8.0 → 86f73c5](https://github.com/rogpeppe/go-internal/compare/v1.8.0...86f73c5)
+- github.com/u-root/u-root: [v7.0.0+incompatible → d511ded](https://github.com/u-root/u-root/compare/v7.0.0...d511ded)
+- github.com/vishvananda/netlink: [e1a867c → 650dca9](https://github.com/vishvananda/netlink/compare/e1a867c...650dca9)
 - go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.26.1 → v0.28.0
 - go.opentelemetry.io/otel/trace: v1.2.0 → v1.3.0
 - go.opentelemetry.io/otel: v1.2.0 → v1.3.0
-- golang.org/x/net: e898025 → d4b1ae0
-- golang.org/x/sys: 751e447 → 0a5406a
+- golang.org/x/mod: v0.4.2 → v0.5.1
+- golang.org/x/net: e898025 → 4f30a5c
+- golang.org/x/sys: 751e447 → 97ca703
+- golang.org/x/term: 6886f2d → 140adaa
 - google.golang.org/grpc: v1.42.0 → v1.43.0
+- mvdan.cc/sh/v3: v3.3.1 → v3.4.3
 
 ### Removed
 _Nothing has changed._
