--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -15,16 +15,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...77718dc](https://github.com/cri-o/cri-o/compare/v1.23.0...77718dcdd31ecff9cc71436642a9484781178089) on Sun, 27 Mar 2022 09:30:48 UTC.
+[v1.23.0...91626a8](https://github.com/cri-o/cri-o/compare/v1.23.0...91626a824927f98a10c14752b7d209cb36f7ea08) on Wed, 30 Mar 2022 05:57:11 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz)
-- [cri-o.amd64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz.sha256sum)
-- [cri-o.arm64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz)
-- [cri-o.arm64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.77718dcdd31ecff9cc71436642a9484781178089.tar.gz.sha256sum)
+- [cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz)
+- [cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum)
+- [cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz)
+- [cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.91626a824927f98a10c14752b7d209cb36f7ea08.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -90,6 +90,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/intel-go/cpuid: [2aa7292](https://github.com/intel-go/cpuid/tree/2aa7292)
 - github.com/kaey/framebuffer: [7b38548](https://github.com/kaey/framebuffer/tree/7b38548)
 - github.com/mattn/go-tty: [v0.0.3](https://github.com/mattn/go-tty/tree/v0.0.3)
+- github.com/onsi/ginkgo/v2: [v2.1.3](https://github.com/onsi/ginkgo/v2/tree/v2.1.3)
 - github.com/orangecms/go-framebuffer: [a0700d9](https://github.com/orangecms/go-framebuffer/tree/a0700d9)
 - github.com/pborman/getopt/v2: [v2.1.0](https://github.com/pborman/getopt/v2/tree/v2.1.0)
 - github.com/pkg/term: [v1.2.0-beta.2](https://github.com/pkg/term/tree/v1.2.0-beta.2)
@@ -110,6 +111,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/docker/docker: [v20.10.9+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.9...v20.10.11)
 - github.com/frankban/quicktest: [v1.11.3 → v1.13.1](https://github.com/frankban/quicktest/compare/v1.11.3...v1.13.1)
 - github.com/go-logr/logr: [v1.2.0 → v1.2.1](https://github.com/go-logr/logr/compare/v1.2.0...v1.2.1)
+- github.com/google/pprof: [cbba55b → 94a9f03](https://github.com/google/pprof/compare/cbba55b...94a9f03)
 - github.com/insomniacslk/dhcp: [cc9239a → 7d93572](https://github.com/insomniacslk/dhcp/compare/cc9239a...7d93572)
 - github.com/kr/pretty: [v0.2.1 → v0.3.0](https://github.com/kr/pretty/compare/v0.2.1...v0.3.0)
 - github.com/manifoldco/promptui: [v0.8.0 → v0.9.0](https://github.com/manifoldco/promptui/compare/v0.8.0...v0.9.0)
